Fixed issue with files and updated redirect on getstarted.html

--- a/templates/get-started.html
+++ b/templates/get-started.html
@@ -16,7 +16,7 @@
         Get Started
         <br><br>
         <div>
-          <a href="templates/main.html" class="button">Main Page</a>
+          <a href="main" class="button">Main Page</a>
         </div>
       </div>
     </div>
