--- a/templates/main.html
+++ b/templates/main.html
@@ -13,6 +13,8 @@
     <div id="body">
       <div class="contentbox">
           <form id="submission" method="post">
+          <!-- TODO: pass this into the python file to make a new attribute/model whenever
+                     it is clicked. also switch to UpdateDatabase page -->
             <input type="text" name="x" placeholder="Enter a new interest" class="inputbox">
             <input type="submit" name="submit" value="Submit" class="button">
           </form>
