--- a/templates/get-started.html
+++ b/templates/get-started.html
@@ -13,7 +13,7 @@
     </div>
     <div id="body">
       <div id="getstarted">
-        Get Started
+        Horizon is perfect for those looking to discover new interests and activities. Join now to expand your Horizon!
         <br><br>
         <div>
           <a href="main" class="button">Main Page</a>
