--- a/stylesheets/master.css
+++ b/stylesheets/master.css
@@ -8,6 +8,11 @@ a {
   text-decoration: none;
 }
 
+p {
+  padding: 0;
+  margin: 0;
+}
+
 #header {
   text-align: center;
   font-size: 16pt;
@@ -38,7 +43,23 @@ a {
   padding: 10px 20px 10px 20px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.00);
   transition: box-shadow 0.2s ease-in-out;
+  margin-top: 10px;
+}
+
+#submission {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+#submit {
+  font-family: "Montserrat", sans-serif;
+  background-image: linear-gradient(to right, #ff4b2b, #f527b0, #a307eb);
+  color: #FFFFFF;
+  padding: 10px 20px 10px 20px;
+  font-size: 10pt;
   border: 0;
+  margin: 0px;
   -webkit-appearance: none;
 }
 
@@ -48,7 +69,7 @@ a {
 
 .inputbox {
   text-align: center;
-  width: 25%;
+  width: 100%;
   padding: 10px;
   margin-right: 20px;
 }
