--- a/stylesheets/master.css
+++ b/stylesheets/master.css
@@ -38,7 +38,8 @@ p {
 }
 
 .button {
-  background-image: linear-gradient(to right, #ff4b2b, #f527b0, #a307eb);
+  background-color: #a307eb;
+  /* background-image: linear-gradient(to right, #ff4b2b, #f527b0, #a307eb); */
   color: #FFFFFF;
   padding: 10px 20px 10px 20px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.00);
@@ -54,7 +55,6 @@ p {
 
 #submit {
   font-family: "Montserrat", sans-serif;
-  background-image: linear-gradient(to right, #ff4b2b, #f527b0, #a307eb);
   color: #FFFFFF;
   padding: 10px 20px 10px 20px;
   font-size: 10pt;
@@ -72,6 +72,7 @@ p {
   width: 100%;
   padding: 10px;
   margin-right: 20px;
+  border: 0;
 }
 
 #footer {
