--- a/templates/main.html
+++ b/templates/main.html
@@ -28,21 +28,27 @@
           <p>Your Current Interests:</p>
           <div class="interests">
             <!-- Probably a Jinja for loop here -->
-            <div id="interest">
+            <!-- When clicked, send to "Selected Interests" and make green -->
+            <a href="#" class="interest">
               <!-- interest model -->
-              yeehaw
-            </div>
+              Cake
+            </a>
+            <a href="#" class="interest">
+              <!-- interest model -->
+              Pie
+            </a>
             <!-- endloop -->
           </div>
         </div>
       </div>
       <div class="contentbox" id="rightbox">
-        <a href="#" class="button">Test</a><br><br>
-        Right Box
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div id="selected-interests-box">
+          Your Selected Interests:
+        </div>
+        <div id="recommendations-box">
+          People With Your Interests Also Like:
+        </div>
+        <!-- <a href="#" class="button">Test</a><br><br> -->
       </div>
     </div>
     <div id="footer">
