Update 'Submit' button to load update-database page (which redirects to main)

--- a/templates/main.html
+++ b/templates/main.html
@@ -16,7 +16,7 @@
         <!-- Has form to append an interest to "Your Interests" -->
         <div id="add-interest-box">
           Add New Interest:
-          <form id="submission" method="post">
+          <form id="submission" method="get" action="/update-database">
             <!-- TODO: pass this into the python file to make a new attribute/model whenever
             it is clicked. also switch to UpdateDatabase page -->
             <input type="text" name="input" placeholder="Enter a new interest" class="inputbox">
