--- a/templates/main.html
+++ b/templates/main.html
@@ -13,13 +13,14 @@
     </div>
     <div id="body">
       <div class="contentbox" id="leftbox">
+        {{current_user.user_id()}}
         <!-- Has form to append an interest to "Your Interests" -->
         <div id="add-interest-box">
           Add New Interest:
           <form id="submission" method="get" action="/update-database">
             <!-- TODO: pass this into the python file to make a new attribute/model whenever
             it is clicked. also switch to UpdateDatabase page -->
-            <input type="text" name="input" placeholder="Enter a new interest" class="inputbox">
+            <input type="text" name="input-interest" placeholder="Enter a new interest" class="inputbox">
             <input type="submit" name="submit" value="Submit" class="button" id="submit">
           </form>
         </div>
@@ -44,6 +45,9 @@
       <div class="contentbox" id="rightbox">
         <div id="selected-interests-box">
           Your Selected Interests:
+          <div class="interests">
+            
+          </div>
         </div>
         <div id="recommendations-box">
           People With Your Interests Also Like:
