Fixed login redirect

--- a/templates/get-started.html
+++ b/templates/get-started.html
@@ -16,7 +16,7 @@
         Horizon is perfect for those looking to discover new interests and activities. Join now to expand your Horizon!
         <br><br>
         <div>
-          <a href="main" class="button">Login</a>
+          <a href="login" class="button">Login</a>
         </div>
       </div>
     </div>
