Added for loop for profile interests

--- a/templates/main.html
+++ b/templates/main.html
@@ -29,16 +29,15 @@
           <p>Your Current Interests:</p>
           <div class="interests">
             <!-- Probably a Jinja for loop here -->
+            {% for key in current_profile.interests %}
 
-            <!-- When clicked, send to "Selected Interests" and make green -->
-            <a href="#" class="interest">
-              <!-- interest model -->
-              Cake
-            </a>
-            <a href="#" class="interest">
-              <!-- interest model -->
-              Pie
-            </a>
+              <!-- When clicked, send to "Selected Interests" and make green -->
+              <a href="#" class="interest">
+                <!-- interest model -->
+                {{key.get().interest_name}}
+
+              </a>
+            {% endfor %}
             <!-- endloop -->
           </div>
         </div>
