Added about us html and to the python

--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Project</title>
     <link rel="stylesheet" href="stylesheets/master.css">
-    <link rel="stylesheet" href="stylesheets/get-started.css">
+    <link rel="stylesheet" href="stylesheets/about-us.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -13,8 +13,24 @@
     </div>
     <div id="body">
       <div id="about-us">
-        put stuff here
-        <br><br>
+        <div><h1>Meet the team!</h1><div>
+<div>
+    <center>
+        <img src="pictures/group.JPG" alt="Group Picture" style="width:60%" >
+    </center>
+</div>
+<div>
+<p>Horizon, an interactive website focused on providing users with new suggestions on interests, was created as a project by Asia, Bethelehem, Zachary, and Isabella as their final project as part of Google's Computer Science Summer Institute. Horizon is a platform for activists around the world to share their opinions on world issues and to make a change.</p>
+<p>If you have any questions or would just like more information about Horizon and its founders, please contact us at horizono@gmail.com.</p>
+</div>
+<div>
+<br>
+<a href="???????"><p style="float: left; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="pictures/asia.jpg" style="width: 100%">Asia Collins</p></a>
+<a href="https://www.linkedin.com/in/bethelehem-engeda-bb3298168/"><p style="float: left; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="pictures/beth.jpg" style="width: 100%">Bethelehem Engeda</p></a>
+<a href="https://www.linkedin.com/in/zachary-rideaux-b8ba4518a/"><p style="float: left; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="pictures/zach.jpg" style="width: 100%">Zachary Rideaux</p></a>
+<a href="https://www.linkedin.com/in/isabella-siu-b01531189/"><p style="float: left; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="pictures/isa.jpg" style="width: 100%">Isabella Siu</p></a>
+<p style="clear: both;">
+</br>
       </div>
     </div>
     <div id="footer">
