--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -20,8 +20,8 @@
     </center>
 </div>
 <div>
-<p>Horizon, an interactive website focused on providing users with new suggestions on interests, was created as a project by Asia, Bethelehem, Zachary, and Isabella as their final project as part of Google's Computer Science Summer Institute. Horizon is a platform for activists around the world to share their opinions on world issues and to make a change.</p>
-<p>If you have any questions or would just like more information about Horizon and its founders, please contact us at horizono@gmail.com.</p>
+<p>Horizon, an interactive website focused on providing users with new suggestions on interests, was created as a project by Asia, Bethelehem, Zachary, and Isabella as their final project as part of Google's Computer Science Summer Institute. Horizon is a platform for people around the world to share their interests with other people and discover some new interests.</p>
+<p>If you have any questions or would like more information about Horizon and its founders, please contact us at horizon@gmail.com.</p>
 </div>
 <div>
 <br>
