--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -20,7 +20,7 @@
     </center>
 </div>
 <div>
-<p>Horizon, an interactive website focused on providing users with new suggestions on interests, was created as a project by Asia, Bethelehem, Zachary, and Isabella as their final project as part of Google's Computer Science Summer Institute. Horizon is a platform for people around the world to share their interests with other people and discover some new interests.</p>
+<p>Horizon, an interactive website focused on providing users with new suggestions on interests, was created as a project by Asia Collins, Bethelehem Engeda, Zachary Rideaux, and Isabella Siu as their final project as part of Google's Computer Science Summer Institute. Horizon is a platform for people around the world to share their interests with other people and discover some new interests.</p>
 <p>If you have any questions or would like more information about Horizon and its founders, please contact us at horizon@gmail.com.</p>
 </div>
 <div id="profiles">
