Updated selected interests to not allow duplicates

--- a/templates/main.html
+++ b/templates/main.html
@@ -70,6 +70,9 @@
         </div>
         <div id="recommendations-box">
           People With Your Interests Also Like:
+          <div class="interests">
+            <a href="#" class="interest learn-more-button">Learn More</a>
+          </div>
         </div>
         <!-- <a href="#" class="button">Test</a><br><br> -->
       </div>
