Added link to logo to make it direct to login page

--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="header">
-      Horizon
+      <a id = "logo" href="/">Horizon</a>
     </div>
     <div id="body">
       <div class="contentbox" id="leftbox">
