added about us button

--- a/templates/get-started.html
+++ b/templates/get-started.html
@@ -15,8 +15,11 @@
       <div id="getstarted">
         Horizon is perfect for those looking to discover new interests and activities. Join now to expand your Horizon!
         <br><br>
-        <div>
-          <a href="login" class="button">Login</a>
+        <div class="button">
+          <a href="login">Login</a>
+        </div>
+        <div class="button">
+          <a href="about-us">About Us</a>
         </div>
       </div>
     </div>
