Added link to about us page horizon logo to direct to get started page

--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="header">
-      Horizon
+      <a href="/">Horizon</a>
     </div>
     <div id="body">
       <div id="about-us">
