--- a/templates/main.html
+++ b/templates/main.html
@@ -71,10 +71,25 @@
         <div id="recommendations-box">
           People With Your Interests Also Like:
           <div class="interests">
-            <a href="#" class="interest learn-more-button">Learn More</a>
+            {% for key in current_profile.interests %}
+              <!-- When clicked, send to "Selected Interests" and make green -->
+              <form action="/update-database" method="POST" class="interest">
+
+                <input type="hidden" name="interest_key" value="{{key.urlsafe()}}"/>
+
+
+                <a href="#" onclick="this.parentNode.submit()" class="interest">
+                  <!-- interest model -->
+                  {{key.get().interest_name}}
+                </a>
+
+              </form>
+            {% endfor %}
+          </div>
+          <div class="button" style="text-align: center">
+            <a href="#">Get New Recommendations</a>
           </div>
         </div>
-        <!-- <a href="#" class="button">Test</a><br><br> -->
       </div>
     </div>
     <div id="footer">
