added contact form to the about us page; still needs to be linked to email

--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -22,7 +22,7 @@
         </div>
         <div>
         <p>Horizon, an interactive website focused on providing users with new suggestions on interests, was created as a project by Asia, Bethelehem, Zachary, and Isabella as their final project as part of Google's Computer Science Summer Institute. Horizon is a platform for people around the world to share their interests with other people and discover some new interests.</p>
-        <p>If you have any questions or would like more information about Horizon and its founders, please contact us at horizon@gmail.com.</p>
+        <p>If you have any questions or would like more information about Horizon and its founders, please contact us using the contact form below.</p>
         </div>
         <div id="profiles">
         <br>
@@ -33,7 +33,25 @@
         <p style="clear: both;">
         </br>
         </div>
+        <div class="container">
+  <form action="action_page.php">
 
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name...">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name...">
+
+    <label for="email">Your Email</label>
+    <input type="text" id="email" name="email" placeholder="Your email account...">
+
+    <label for="subject">Message</label>
+    <textarea id="subject" name="subject" placeholder="Write something..." style="height:170px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+</div>
       </div>
     </div>
     <div id="footer">
