--- a/templates/get-started.html
+++ b/templates/get-started.html
@@ -15,6 +15,9 @@
       <div id="getstarted">
         Horizon is perfect for those looking to discover new interests and activities. Join now to expand your Horizon!
         <br><br>
+        <div id = logo-photo>
+        <img src="https://i.imgur.com/VjoIUS5.png" alt= "Horzion Logo" width = "500">
+        </div>
         <div class="button">
           <a href="login">Login</a>
         </div>
