--- a/templates/main.html
+++ b/templates/main.html
@@ -71,23 +71,23 @@
         <div id="recommendations-box">
           People With Your Interests Also Like:
           <div class="interests">
-            {% for key in current_profile.interests %}
+            {% for key in current_profile.recommendations %}
               <!-- When clicked, send to "Selected Interests" and make green -->
               <form action="/update-database" method="POST" class="interest">
 
                 <input type="hidden" name="interest_key" value="{{key.urlsafe()}}"/>
 
 
-                <a href="#" onclick="this.parentNode.submit()" class="interest">
+                <span class="interest">
                   <!-- interest model -->
                   {{key.get().interest_name}}
-                </a>
+                </span>
 
               </form>
             {% endfor %}
           </div>
-          <div class="button" style="text-align: center">
-            <a href="#">Get New Recommendations</a>
+          <div class="button" action="/update-database" method="POST" style="text-align: center">
+            <a href="#" onclick="this.parentNode.submit()">Get New Recommendations</a>
           </div>
         </div>
       </div>
