Get New Recommendations button now refreshes recommendations

--- a/templates/main.html
+++ b/templates/main.html
@@ -86,9 +86,9 @@
               </form>
             {% endfor %}
           </div>
-          <div class="button" action="/update-database" method="POST" style="text-align: center">
+          <form class="button" action="/update-database" method="POST" style="text-align: center">
             <a href="#" onclick="this.parentNode.submit()">Get New Recommendations</a>
-          </div>
+          </form>
         </div>
       </div>
     </div>
