Added get-recommendations handler to prevent reloading when new interest is added to selected interests and changed page titles

--- a/templates/get-started.html
+++ b/templates/get-started.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Project</title>
+    <title>Horizon: Get Started</title>
     <link rel="stylesheet" href="stylesheets/master.css">
     <link rel="stylesheet" href="stylesheets/get-started.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&display=swap" rel="stylesheet">
