--- a/templates/main.html
+++ b/templates/main.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Project</title>
+    <title>Horizon</title>
     <link rel="stylesheet" href="stylesheets/master.css">
     <link rel="stylesheet" href="stylesheets/main.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -85,7 +85,7 @@
               </form>
             {% endfor %}
           </div>
-          <form class="button" action="/update-database" method="POST" style="text-align: center">
+          <form class="button" action="/get-recommendations" method="POST" style="text-align: center">
             <a href="#" onclick="this.parentNode.submit()">Get New Recommendations</a>
           </form>
         </div>
