--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -17,7 +17,7 @@
         <div><center><h1>Meet the team!</center></h1></div>
         <div>
             <center>
-                <img src="https://i.imgur.com/2PqzxbN.jpg" alt="Group Picture" style="width:60%" >
+                <img src="https://i.imgur.com/2PqzxbN.jpg" alt="Group Picture" style="width:68%" >
             </center>
         </div>
         <div>
@@ -26,10 +26,10 @@
         </div>
         <div id="profiles">
         <br>
-        <a href="https://www.linkedin.com/in/asia-collins-44a3b0190"><p style="float: left; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="https://i.imgur.com/GxE9Mim.jpg" style="width: 150px">Asia Collins</p></a>
-        <a href="https://www.linkedin.com/in/bethelehem-engeda-bb3298168/"><p style="float: left; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="https://i.imgur.com/86PjKlL.jpg" style="width: 150px">Bethelehem Engeda</p></a>
-        <a href="https://www.linkedin.com/in/zachary-rideaux-b8ba4518a/"><p style="float: left; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="https://i.imgur.com/W8sZ8jO.jpg" style="width: 150px">Zachary Rideaux</p></a>
-        <a href="https://www.linkedin.com/in/isabella-siu-b01531189/"><p style="float: left; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="https://i.imgur.com/ZzrE10T.jpg" style="width: 150px">Isabella Siu</p></a>
+        <a href="https://www.linkedin.com/in/asia-collins-44a3b0190"><p style="float: center; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="https://i.imgur.com/GxE9Mim.jpg" style="width: 150px">Asia Collins</p></a>
+        <a href="https://www.linkedin.com/in/bethelehem-engeda-bb3298168/"><p style="float: center; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="https://i.imgur.com/86PjKlL.jpg" style="width: 150px">Bethelehem Engeda</p></a>
+        <a href="https://www.linkedin.com/in/zachary-rideaux-b8ba4518a/"><p style="float: center; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="https://i.imgur.com/W8sZ8jO.jpg" style="width: 150px">Zachary Rideaux</p></a>
+        <a href="https://www.linkedin.com/in/isabella-siu-b01531189/"><p style="float: center; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="https://i.imgur.com/ZzrE10T.jpg" style="width: 150px">Isabella Siu</p></a>
         <p style="clear: both;">
         </br>
         </div>
