Added clear recommendations button and stylized user information on main.html

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,3 +1,9 @@
+#logged-in-box {
+  background-color: #EEEEEE;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
 #add-interest-box {
   background-color: #EEEEEE;
   padding: 20px;
