--- a/templates/get-started.html
+++ b/templates/get-started.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&display=swap" rel="stylesheet">
   </head>
   <body>
+    </div>
     <div id="header">
       Horizon
     </div>
