added horizon image to the about us page

--- a/stylesheets/get-started.css
+++ b/stylesheets/get-started.css
@@ -8,11 +8,12 @@ body {
      content-box              /* clip */
      red;                     /* color */
 }
+
 #getstarted {
   width: 100%;
   text-align: center;
   padding: 20px;
-  padding-bottom: 750px
+  padding-bottom: 750px;
 }
 
 .button a {
