--- a/stylesheets/get-started.css
+++ b/stylesheets/get-started.css
@@ -3,7 +3,8 @@
   background-color: #FFFFFF;
   text-align: center;
   padding: 20px;
-  padding-bottom: 750px
+  padding-bottom: 400px;
+
 }
 
 .button a {
