--- a/templates/get-started.html
+++ b/templates/get-started.html
@@ -13,7 +13,8 @@
     </div>
     <div id="body">
       <div id="getstarted">
-        Horizon is perfect for those looking to discover new interests and activities. Join now to expand your Horizon!
+        <h1>Who We Are</h1>
+        Horizon is a webapp perfect for those looking to discover new interests and activities. Get to know yourself better by trying new things. You can get suggestions for new foods to try or new places to visit. Join now to expand your Horizon!
         <br><br>
         <div id = logo-photo>
         <img src="https://i.imgur.com/VjoIUS5.png" alt= "Horzion Logo" width = "500">
