--- a/stylesheets/get-started.css
+++ b/stylesheets/get-started.css
@@ -1,12 +1,5 @@
 body {
-  background:
-     url(https://i.imgur.com/QUXYuBn.jpg)    /* image */
-     top center / 2500px 1000px /* position / size */
-     no-repeat                /* repeat */
-     fixed                    /* attachment */
-     padding-box              /* origin */
-     content-box              /* clip */
-     red;                     /* color */
+  background-color: white;
 }
 
 #getstarted {
