Make slight changes to button styles

--- a/templates/main.html
+++ b/templates/main.html
@@ -23,7 +23,7 @@
             <!-- TODO: pass this into the python file to make a new attribute/model whenever
             it is clicked. also switch to UpdateDatabase page -->
             <input type="text" name="input-interest" placeholder="Enter a new interest" class="inputbox">
-            <input type="submit" name="submit" value="Submit" class="button" id="submit">
+            <input type="submit" name="submit" value="  Add  " class="button" id="submit">
           </form>
         </div>
         <!-- Displays each of user's Interests -->
