added picture to get started

--- a/templates/get-started.html
+++ b/templates/get-started.html
@@ -17,8 +17,14 @@
         <div id = logo-photo>
         <img src="https://i.imgur.com/VjoIUS5.png" alt= "Horzion Logo" width = "500">
         </div>
-        <h1>Who We Are</h1>
-        Horizon is a webapp perfect for those looking to discover new interests and activities. Get to know yourself better by trying new things. You can get suggestions for new foods to try or new places to visit. Join now to expand your Horizon!
+        <div id = horizon-background>
+          <div class="get-started-container" id = blank-space>
+          </div>
+          <div class="get-started-container" id = "who-we">
+          <h1>Who We Are</h1>
+          Horizon is a webapp perfect for those looking to discover new interests and activities. Get to know yourself better by trying new things. You can get suggestions for new foods to try or new places to visit. Join now to expand your Horizon!
+          </div>
+        </div>
         <br><br>
         <div class="button">
           <a href="login">Login</a>
