added favicon icon to all of the html pages

--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -5,6 +5,7 @@
     <title>Horizon: About Us</title>
     <link rel="stylesheet" href="stylesheets/master.css">
     <link rel="stylesheet" href="stylesheets/about-us.css">
+    <link rel="shortcut icon" href="https://i.imgur.com/JJXIYiI.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&display=swap" rel="stylesheet">
   </head>
   <body>
