--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -26,33 +26,51 @@
         <p>If you have any questions or would like more information about Horizon and its founders, please contact us using the contact form below.</p>
         </div>
         <div id="profiles">
-        <br>
-        <a href="https://www.linkedin.com/in/asia-collins-44a3b0190"><p style="float: center; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="https://i.imgur.com/GxE9Mim.jpg" style="width: 150px">Asia Collins</p></a>
-        <a href="https://www.linkedin.com/in/bethelehem-engeda-bb3298168/"><p style="float: center; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="https://i.imgur.com/86PjKlL.jpg" style="width: 150px">Bethelehem Engeda</p></a>
-        <a href="https://www.linkedin.com/in/zachary-rideaux-b8ba4518a/"><p style="float: center; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="https://i.imgur.com/W8sZ8jO.jpg" style="width: 150px">Zachary Rideaux</p></a>
-        <a href="https://www.linkedin.com/in/isabella-siu-b01531189/"><p style="float: center; font-size: 9pt; text-align: center; width: 18%; margin-right: 0.7%; margin-bottom: 0.5em;"><img src="https://i.imgur.com/ZzrE10T.jpg" style="width: 150px">Isabella Siu</p></a>
-        <p style="clear: both;">
-        </br>
+          <br>
+          <div id="asia">
+            <a href="https://www.linkedin.com/in/asia-collins-44a3b0190">
+              <img src="https://i.imgur.com/GxE9Mim.jpg">
+              <p>Asia Collins</p>
+            </a>
+          </div>
+          <div id="bethelehem">
+            <a href="https://www.linkedin.com/in/bethelehem-engeda-bb3298168/">
+              <img src="https://i.imgur.com/86PjKlL.jpg">
+              <p>Bethelehem Engeda</p>
+            </a>
+          </div>
+          <div id="zachary">
+            <a href="https://www.linkedin.com/in/zachary-rideaux-b8ba4518a/">
+              <img src="https://i.imgur.com/W8sZ8jO.jpg">
+              <p>Zachary Rideaux</p>
+            </a>
+          </div>
+          <div id="isabella">
+            <a href="https://www.linkedin.com/in/isabella-siu-b01531189/">
+              <img src="https://i.imgur.com/ZzrE10T.jpg">
+              <p>Isabella Siu</p>
+            </a>
+          </div>
         </div>
         <div class="container">
-  <form action="action_page.php">
+          <form action="action_page.php">
 
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name...">
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name...">
 
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name...">
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lastname" placeholder="Your last name...">
 
-    <label for="email">Your Email</label>
-    <input type="text" id="email" name="email" placeholder="Your email account...">
+            <label for="email">Your Email</label>
+            <input type="text" id="email" name="email" placeholder="Your email account...">
 
-    <label for="subject">Message</label>
-    <textarea id="subject" name="subject" placeholder="Write something..." style="height:170px"></textarea>
+            <label for="subject">Message</label>
+            <textarea id="subject" name="subject" placeholder="Write something..." style="height:170px"></textarea>
 
-    <input type="submit" value="Submit">
+            <input type="submit" value="Submit">
 
-  </form>
-</div>
+          </form>
+        </div>
       </div>
     </div>
     <div id="footer">
