Adjusted buttons on get started page

--- a/templates/get-started.html
+++ b/templates/get-started.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&display=swap" rel="stylesheet">
   </head>
   <body>
-    </div>
     <div id="header">
       Horizon
     </div>
@@ -19,20 +18,20 @@
         <img src="https://i.imgur.com/VjoIUS5.png" alt= "Horzion Logo" width = "500">
         </div>
         <div id = horizon-background>
-          <div class="get-started-container" id = blank-space>
-          </div>
           <div class="get-started-container" id = "who-we">
-          <h1>Who We Are</h1>
-          Horizon is a webapp perfect for those looking to discover new interests and activities. Get to know yourself better by trying new things. You can get suggestions for new foods to try or new places to visit. Join now to expand your Horizon!
+            <h1>Who We Are</h1>
+            Horizon is a webapp perfect for those looking to discover new interests and activities. Get to know yourself better by trying new things. You can get suggestions for new foods to try or new places to visit. Join now to expand your Horizon!
+              <div id = "buttons">
+                <div class="button">
+                  <a href="login">Login</a>
+                </div>
+                <div class="button">
+                  <a href="about-us">About Us</a>
+                </div>
+              </div>
           </div>
         </div>
         <br><br>
-        <div class="button">
-          <a href="login">Login</a>
-        </div>
-        <div class="button">
-          <a href="about-us">About Us</a>
-        </div>
       </div>
     </div>
     <div id="footer">
