--- a/stylesheets/get-started.css
+++ b/stylesheets/get-started.css
@@ -1,5 +1,5 @@
 body {
-  background-color: white;
+  background-color: #FFFFFF;
   margin: 0px;
 
 }
@@ -14,12 +14,12 @@ body {
   width: 100%;
   text-align: center;
   /* padding: 20px; */
-  padding-bottom: 750px;
+  padding-bottom: 100px;
 }
 
 .button {
-  width: 300px;
-  margin: 0px 10% 20px 10%;
+  width: 80%;
+  /* margin: 0px 10% 20px 10%; */
   align-self: center;
 }
 
@@ -48,12 +48,21 @@ h1 {
   margin: 0px;
 }
 
+#buttons {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  opacity: 1.0;
+}
+
 #horizon-background {
   display: flex;
   margin-top: 20px;
   margin-left: 0px;
   width: 100%;
-  height: 300px;
+  height: 400px;
   justify-content: space-around;
   min-width: 100%;
   background-size: 100% 500px;
