--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -18,11 +18,11 @@
         <div><center><h1>Meet the team!</center></h1></div>
         <div>
             <center>
-                <img src="https://i.imgur.com/2PqzxbN.jpg" alt="Group Picture" style="width:50%" >
+                <img src="https://i.imgur.com/psB6fay.jpg" alt="Group Picture" style="width:50%; padding-bottom: 20px;" >
             </center>
         </div>
         <div>
-        <p>Horizon, an interactive website focused on providing users with new suggestions on interests, was created as a project by Asia Collins, Bethelehem Engeda, Zachary Rideaux, and Isabella Siu as their final project as part of Google's Computer Science Summer Institute. Horizon is a platform for people around the world to share their interests with other people and discover some new interests.</p>
+          <p>Horizon, an interactive website focused on providing users with new suggestions on interests, was created as a project by Asia Collins, Bethelehem Engeda, Zachary Rideaux, and Isabella Siu as their final project as part of Google's Computer Science Summer Institute. Horizon is a platform for people around the world to share their interests with other people and discover some new interests.</p>
         </div>
         <div id="profiles">
           <br>
@@ -51,9 +51,9 @@
             </a>
           </div>
         </div>
-        <p>If you have any questions or would like more information about Horizon and its founders, please contact us using the contact form below.</p>
+        <p id="contact">If you have any questions or would like more information about Horizon and its founders, please contact us using the contact form below.</p>
         <div class="container">
-          <form action="action_page.php">
+          <form action="action_page.php" id="contact-form">
 
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name...">
