--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -53,7 +53,7 @@
         </div>
         <p>If you have any questions or would like more information about Horizon and its founders, please contact us using the contact form below.</p>
         <div class="container">
-          <form action="action_page.php">
+          <form action="mailto:horizoncssi.com">
 
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name...">
